do not index this page

--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#000000" />
   <meta name="description" content="New Rajshree Sweets Menu" />
-  <title>New Rajshree Sweets Menu</title>
+  <title>New Rajshree Sweets | Menu</title>
+  <link rel="icon" type="image" href="https://assets.newrajshreesweets.com/icon.webp" />
 </head>
 
 <body>
